<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/playing_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/playing_now"
        android:textColor="@color/play_text_page"
        android:textSize="@dimen/playing_now_text" />

    <ImageView
        android:id="@+id/music_image"
        android:layout_width="@dimen/playing_now_image_size"
        android:layout_height="@dimen/playing_now_image_size"
        android:layout_below="@id/playing_now"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/default_padding"
        android:src="@drawable/music_notes"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/classical_button"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/playing_now"
        android:layout_margin="@dimen/playing_now_button_margin"
        android:src="@drawable/classical"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/country_button"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/classical_button"
        android:layout_margin="@dimen/playing_now_button_margin"
        android:src="@drawable/country"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/disco_button"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_below="@id/music_image"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/playing_now_button_margin"
        android:src="@drawable/disco"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/pop_button"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/playing_now"
        android:layout_margin="@dimen/playing_now_button_margin"
        android:src="@drawable/pop"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/rock_button"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/pop_button"
        android:layout_margin="@dimen/playing_now_button_margin"
        android:src="@drawable/rock"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/home_button"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/playing_now_button_margin"
        android:src="@drawable/home"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/disco_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/artist"
        android:textColor="@color/play_text_page"
        android:textSize="@dimen/playing_now_artist" />

    <TextView
        android:id="@+id/track_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/artist_name"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/track"
        android:textColor="@color/play_text_page"
        android:textSize="@dimen/playing_now_track" />
</RelativeLayout>
